--- a/src/component/MainPage/main.css
+++ b/src/component/MainPage/main.css
@@ -1,22 +1,31 @@
 .menu{
-    background-color: transparent;
-    border: 0px;
-    box-shadow: none;
-    color: white; height: 56px;
+    background-color:transparent !important;
+    border: 0px !important;
+    box-shadow: none !important;
+    color: white !important;
+     height: 56px  !important;
 }
 
 
 .mainPageHeader{
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    font-weight: 200;
-    color: white;
+    font-size: 14px !important;
+    display: flex !important;
+    align-items: center !important;
+    font-weight: 200 !important;
+    color: white !important;
 }
 
 .item{
-    font-size: 14px;
-    cursor: pointer;
-    font-weight: 200;
-    color: white;
+    font-size: 14px !important;
+    cursor: pointer !important;
+    font-weight: 200 !important;
+    color: white !important;
+}
+
+.lms-footer {
+    padding-top: 10px;
+    position: absolute ;
+    bottom: 0;
+    width: 100%;
+    height: 47px;
 }
