--- a/src/component/MainPage/main.css
+++ b/src/component/MainPage/main.css
@@ -29,3 +29,25 @@
     width: 100%;
     height: 47px;
 }
+
+.backgroundImage{
+    position: fixed !important;
+    top: -40px !important;
+    right: 0px !important;
+    z-index: 1 !important;
+    height: 240px !important;
+    width: 100% !important;
+}
+
+.portrait{
+    display: flex !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+}
+
+.circular{
+    width: 80px !important;
+    height: 80px !important;
+    margin-right: 16px !important;
+    border: 4px solid white !important;
+}
