--- a/src/component/MainPage/main.css
+++ b/src/component/MainPage/main.css
@@ -51,3 +51,9 @@
     margin-right: 16px !important;
     border: 4px solid white !important;
 }
+
+.sentences{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
