--- a/src/component/MainPage/main.css
+++ b/src/component/MainPage/main.css
@@ -103,3 +103,11 @@
     margin-left: 80px !important;
 }
 
+.reveal{
+    width: 160px;
+    height: 160px;
+    margin-right: 16px;
+    border: 4px solid orange;
+    border-radius: 50%;
+    cursor: pointer;
+}
