--- a/src/component/style.css
+++ b/src/component/style.css
@@ -1,18 +1,10 @@
-
+/*尾部的css*/
 .lms-footer {
     padding-top: 10px;
     position: absolute ;
     bottom: 0;
     width: 100%;
     height: 47px;
-}
-
-.backgroundImage{
-    position: fixed !important;
-    top: -40px !important;
-    right: 0px !important;
-    height: 240px !important;
-    width: 100% !important;
 }
 
 .portrait{
