将style.css的内容迁移到文件本身

--- a/src/component/style.css
+++ b/src/component/style.css
@@ -7,14 +7,7 @@
     height: 47px;
 }
 
-.portrait{
-    display: flex !important;
-    justify-content: space-between !important;
-    align-items: center !important;
-}
-
-
-/* 人物头像的css */
+/* 人物圆形头像的css */
 .circular{
     width: 80px !important;
     height: 80px !important;
@@ -46,34 +39,3 @@
     color: rgb(94, 104, 241) !important;
 }
 
-.lessonReveal{
-    width: 200px;
-    height: 112.5px;
-    border-radius: 2px;
-    cursor: pointer;
-}
-
-.photoContent{
-    height: 100%;
-    border: 1px dashed grey;
-    cursor: pointer;
-    text-align: center;
-}
-
-.text{
-    color: black !important
-}
-
-.scrolling {
-    margin-top:100px !important;
-    margin-left: 80px !important;
-}
-
-.userReveal{
-    width: 160px;
-    height: 160px;
-    margin-right: 16px;
-    border: 4px solid orange;
-    border-radius: 50%;
-    cursor: pointer;
-}
