--- a/src/component/style.css
+++ b/src/component/style.css
@@ -1,7 +1,7 @@
 /*尾部的css*/
 .lms-footer {
     padding-top: 10px;
-    position: absolute ;
+    position:relative;
     bottom: 0;
     width: 100%;
     height: 47px;
